# wrapper-evm

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  deny.toml
.config/: zepter.yaml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: BUG-FORM.yml
.github/workflows/: ci.yml
crates/evm/: Cargo.toml  README.md
crates/evm/src/: block.rs  call.rs  either.rs  env.rs  error.rs  eth.rs  evm.rs  lib.rs  op.rs  overrides.rs  precompiles.rs  tracing.rs  traits.rs  tx.rs
crates/evm/src/block/: calc.rs  error.rs  mod.rs  state_changes.rs  state_hook.rs
crates/evm/src/block/system_calls/: eip2935.rs  eip4788.rs  eip7002.rs  eip7251.rs  mod.rs
crates/evm/src/eth/: block.rs  eip6110.rs  mod.rs  receipt_builder.rs
crates/op-evm/: Cargo.toml
crates/op-evm/src/: lib.rs
crates/op-evm/src/block/: canyon.rs  mod.rs  receipt_builder.rs
crates/spec/: Cargo.toml  README.md
crates/spec/src/: eth.rs  fork.rs  lib.rs  op.rs
scripts/: check_no_std.sh
