[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
authors = ["Alloy Contributors"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/alloy-rs/alloy-evm"
repository = "https://github.com/alloy-rs/alloy-evm"
exclude = ["benches/", "tests/"]

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
alloy-evm = { version = "0.1.0", path = "crates/evm", default-features = false }
alloy-op-evm = { version = "0.1.0", path = "crates/op-evm", default-features = false }

# alloy
alloy-eip2124 = { version = "0.1", default-features = false }
alloy-chains = { version = "0.1.32", default-features = false }
alloy-eips = { version = "0.11", default-features = false }
alloy-consensus = { version = "0.11", default-features = false }
alloy-primitives = { version = "0.8", default-features = false }

# revm
revm = { version = "20.0.0-alpha.1", default-features = false }
revm-optimism = { version = "1.0.0-alpha.1", default-features = false }

# misc
derive_more = { version = "1", default-features = false, features = ["full"] }
serde = { version = "1", default-features = false, features = ["derive"] }

[patch.crates-io]
revm = { git = "https://github.com/bluealloy/revm", rev = "a8a9893b" }
revm-optimism = { git = "https://github.com/bluealloy/revm", rev = "a8a9893b" }
