[package]
name = "alloy-evm"
description = "EVM abstraction for Alloy"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
derive_more.workspace = true
revm.workspace = true


[features]
default = ["std"]
std = [
	"alloy-primitives/std",
	"derive_more/std",
	"revm/std"
]
optimism = ["revm/optimism"]
