[package]
name = "alloy-evm"
description = "EVM abstraction for Alloy"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true

revm.workspace = true
op-revm = { workspace = true, optional = true }

thiserror.workspace = true

[features]
default = ["std"]
std = [
	"alloy-primitives/std",
	"revm/std"
]
op = ["op-revm"]
