[package]
name = "alloy-op-evm"
description = "OP EVM implementation"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-evm = { workspace = true, features = ["op"] }
revm.workspace = true
revm-optimism.workspace = true


[features]
default = ["std"]
std = [
	"alloy-primitives/std",
	"revm/std",
	"alloy-evm/std"
]
