[package]
name = "alloy-evm-spec"
description = "EVM specification"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
alloy-eip2124.workspace = true
alloy-chains.workspace = true
alloy-primitives.workspace = true

derive_more.workspace = true
serde = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
	"alloy-primitives/std"
]
serde = [
	"dep:serde",
	"alloy-primitives/serde"
]
