[package]
name = "alloy-evm-spec"
description = "EVM specification"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
alloy-eip2124.workspace = true
alloy-chains.workspace = true
alloy-primitives.workspace = true

derive_more.workspace = true
serde = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
	"alloy-primitives/std",
	"alloy-chains/std",
	"alloy-eip2124/std",
	"derive_more/std",
	"serde?/std"
]
serde = [
	"dep:serde",
	"alloy-primitives/serde",
	"alloy-chains/serde",
	"alloy-eip2124/serde"
]
